--- a/web/index.html
+++ b/web/index.html
@@ -15,34 +15,34 @@
 
     <div id="keypad">
         <div class="keypad-row">
-            <div id="clear"     class="key">C</div>
-            <div id="lbrace"    class="key color-blue">&#40;</div>
-            <div id="rbrace"    class="key color-blue">&#41;</div>
-            <div id="div-sign"  class="key color-blue">&divide;</div>
+            <div id="clear">C</div>
+            <div class="sign color-blue">&#40;</div>
+            <div class="sign color-blue">&#41;</div>
+            <div class="sign color-blue">&divide;</div>
         </div>
         <div class="keypad-row">
-            <div                class="key digit">7</div>
-            <div                class="key digit">8</div>
-            <div                class="key digit">9</div>
-            <div id="mul-sign"  class="key color-blue">&times;</div>
+            <div class="digit">7</div>
+            <div class="digit">8</div>
+            <div class="digit">9</div>
+            <div class="sign color-blue">&times;</div>
         </div>
         <div class="keypad-row">
-            <div                class="key digit">4</div>
-            <div                class="key digit">5</div>
-            <div                class="key digit">6</div>
-            <div id="sub-sign"  class="key color-blue">&minus;</div>
+            <div class="digit">4</div>
+            <div class="digit">5</div>
+            <div class="digit">6</div>
+            <div class="sign color-blue">&minus;</div>
         </div>
         <div class="keypad-row">
-            <div                class="key digit">1</div>
-            <div                class="key digit">2</div>
-            <div                class="key digit">3</div>
-            <div id="add-sign"  class="key color-blue">&plus;</div>
+            <div class="digit">1</div>
+            <div class="digit">2</div>
+            <div class="digit">3</div>
+            <div class="sign color-blue">&plus;</div>
         </div>
         <div class="keypad-row">
-            <div id="pow-sign"  class="key">&#94;</div>
-            <div                class="key digit">0</div>
-            <div id="dot-sign"  class="key">&#8729;</div>
-            <div id="eql-sign"  class="key">&equals;</div>
+            <div class="sign">&#94;</div>
+            <div class="digit">0</div>
+            <div class="sign">&#8729;</div>
+            <div id="eql-sign">&equals;</div>
         </div>
     </div>
 
